<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="app_logo">App Logo</string>
    <string name="btn_start">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_thumbnail">Exercise thumbnail</string>
    <string name="congratulations">Congratulations!</string>
    <string name="sub_title">You have done the workout!</string>
    <string name="finish">FINISH</string>
    <string name="image">image</string>
    <string name="end">END</string>
    <string name="confirmation_question">Are you sure?</string>
    <string name="confirmation_desc">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="calculator_title">BMI</string>
    <string name="calculator_desc">Calculator</string>
    <string name="lbl_height">HEIGHT (in cm)</string>
    <string name="lbl_bmi">YOUR BMI</string>
    <string name="lbl_calculate">CALCULATE</string>
    <string name="lbl_weight">WEIGHT (in kg)</string>
    <string name="units_metric">METRIC UNITS</string>
    <string name="units_us">US UNITS</string>
</resources>