<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--START-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".FinishActivity">

        <!-- Custom Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_finish_activity"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="#FFFFFF" />

        <!-- Text: End -->
        <TextView
            android:id="@+id/tvEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/end"
            android:textColor="@color/colorAccent"
            android:textSize="35sp" />

        <!-- Circular Border -->
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/item_circular_color_accent_border"
            android:gravity="center">

            <!-- ICON: Here the ic_action_done image in added in the drawables folders.-->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_action_done" />

        </LinearLayout>

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/congratulations"
            android:textColor="#212121"
            android:textSize="18sp" />

        <!-- Sub title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_title"
            android:textColor="#212121"
            android:textSize="18sp" />

        <!-- Button: Finish -->
        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorAccent"
            android:text="@string/finish"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout><!--END-->
</layout>